apps/Tests/src/pages/Errors/Duplicate_DestinationIDs/index.astro
---

	//###  Layout  ###//
	import Layout from "Layouts/Main/Layout.astro"

---



<Layout>

	<portal-destination name="Portal" slot="B"/>

</Layout>
